--- a/main.html
+++ b/main.html
@@ -7,8 +7,78 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table style="width: 100%; height: 100%">
-      <!-- Your code here -->
+     <table style="width: 100%; height= 100%" border>
+        <tr>
+            <td>
+                        <!-- NESTED TABLE 2 -->
+
+                <table style="width: 100%; height= 100%" border>
+                    <tr>
+                        <th align="center" colspan="2"><b>Nested Table 2</b></td>
+                    </tr>
+                    <tr>
+                        <th align="center"><b>Column 1</b></th>
+                        <th align="center"><b>Column 2</b></th>
+                    </tr>
+                    <tr>
+                        <td align="center">abc</td>
+                        <td align="center">def</td>
+                    </tr>
+                </table>
+            </td>
+            <td>
+
+                            <!-- NESTED TABLE 1 -->
+                <table style="width: 100%; height= 100%" border>
+                    <tr>
+                       <th align="center"><b>Nested Table 1</b></th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <ul align="center">
+                                <li>List item</li>
+                                <li>List item</li>
+                                <li>List item</li>
+                               </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        
+                    </tr>
+                </table>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+
+                            <!-- NESTED TABLE 3 -->
+                <table style="width: 100%; height= 100%" border>
+        <tr>
+            <th colspan="2" align="center"><b>Nested Table 3</b></th>
+        </tr>
+        <tr>
+            <td style="color:purple"><a href="">Nested Table</a></td>
+            <td align="center">Demo continued</td>
+        </tr>
+    </table>
+            </td>
+
+            <td>
+                            <!-- NESTED TABLE 4 -->
+
+                <table style="width: 100%; height: 100%" border>
+        <tr>
+            <th align="center"><b>Nested Table 4</b></th>
+        </tr>
+        <tr>
+            <td align="center" style="background-color: black; color: white;">
+                HTML
+            </td>
+        </tr>
+    </table>
+            </td>
+        </tr>
     </table>
   </body>
 </html>
